# zindo-backend

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
core/: settings.py  urls.py  utils.py
user/: admin.py  models.py  serializers.py  urls.py  views.py  viewsets.py
user/migrations/: 0001_initial.py
zindo/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  viewsets.py
zindo/management/commands/: seed.py
zindo/migrations/: 0001_initial.py  0002_alter_record_created_at.py  0003_remove_student_birthday_student_admission_year.py  0004_rename_admission_year_student_admission_date.py  0005_alter_sheet_pace.py  0006_alter_sheet_pace.py  0007_alter_sheet_is_finished.py  0008_alter_record_created_at.py  0009_student_is_active.py  0010_statsbatch.py
